<?xml version="1.0"?>
<package format="2">
	<name>dr_msgs</name>
	<version>0.1.0</version>
	<description>The dr_msgs package</description>
	<license>all-rights-reserved</license>

	<maintainer email="h.gaiser@fizyr.com">Hans Gaiser</maintainer>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>message_generation</depend>
	<depend>message_runtime</depend>
	<depend>geometry_msgs</depend>
	<depend>sensor_msgs</depend>
</package>
